--- a/static/css/CaC.css
+++ b/static/css/CaC.css
@@ -1,125 +1,187 @@
-:root {
-    --color-primario: rgb(249, 247, 243);
-    --color-fondo-header: bisque;
-    --color-texto-header: rgb(247, 160, 114);
-    --color-celeste-body: rgb(181, 226, 250);
-    --color-rosita-body: rgb(215, 163, 177);
-    --color-amarillito-body: rgb(255, 234, 149);
-
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swp');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: "Itim";
-}
-
-#logo {
-    width: 70px;
-    height: 70px;
-    border-radius: 100%;
-    box-shadow: 1.5px 1.5px 2.5px;
-    transition-property: all;
-    transition-duration: 0.5s;
-    transition-timing-function: linear;
-}
-
-#logo:hover {
-    transform: scale(1.15);
-}
-
-.en-linea-header {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.en-linea {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    flex-wrap: wrap;
-}
-
-.hipervinc {
-    color: var(--color-texto-header);
-    text-decoration: none;
-    margin: 0 10px;
-    background-color: var(--color-primario);
-    padding: 10px;
-    box-shadow: 1.5px 1.5px 2.5px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-}
-
-.hipervinc:hover {
-    color: var(--color-primario);
-    background-color: var(--color-texto-header);
-    box-shadow: 1.5px 1.5px 2.5px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 header {
-    background-color: var(--color-fondo-header);
-    color: var(--color-texto-header);
-    text-align: center;
-    padding: 15px;
-    height: 80px;
-}
-
-#title-form {
-    text-align: center;
-    margin-top: 2%;
-    font-size: 16px;
-}
-
-.seccion-uno{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 100px;
+    z-index: 10000;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    transition: 0.5s;
+}
+p {
+    font-weight: 300;
+    color: #111;
+}
+
+.inicio {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    background: linear-gradient(to bottom, rgba(33, 94, 134, 0.8), rgba(255, 0, 0, 0)), url('/assets/media/imgs/seccion-inicio.jpg');
+    background-size: cover;
+    pointer-events: none; 
+}
+
+.inicio .contenedor-logoG {
+    max-width: 900px;
+    text-align: center;
+}
+
+
+.sticky {
+    background: #fff;
+    padding: 10px 100px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+}
+.logo {
+    color: #fff;
+    padding-bottom: 100px;
+    font-weight: 700;
+    font-size: 2em;
+    text-decoration: none;
+}
+
+.mini-logo {
+    width: 200px;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.links-menu {
+    position: relative;
+    display: flex;
+}
+.links-menu li {
+    list-style: none;
+    margin-left: 30px;
+}
+.links-menu li a {
+    font-size: 18px;
+    text-align: none;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 300;
+}
+
+.sticky .links-menu li a {
+    color: #111;
+    text-decoration: none;
+}
+
+.sticky .links-menu li a:hover {
+    color: #ff0157;
+
+}
+
+section {
+    padding: 100px;
+}
+
+.titulo-section {
+    color: #111;
+    font-size: 2em;
+    font-weight: 300;
+}
+.titulo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* SECCION NOSOTROS */
+
+.nosotros {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.nosotros .article-nosotros {
+    position: relative;
+    width: 48%;
+}
+
+.nosotros .article-nosotros .img-nosotros {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.nosotros .article-nosotros .img-nosotros img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* SECCION SERVICIOS */
+
+.seguimiento,
+.cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin-top: 40px;
+  
+}
+  
+.card {
+    width: 340px;
+    margin: 15px;
+    padding: 25px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+  
+.card-text {
+    font-style: italic;
+}
+  
+.servicios .image-card{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    overflow: hidden;
+  
+}
+ 
+.image-card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.servicios {
     background: url('/static/img/seccion-servicio.jpg');
     background-size: cover;
-}
-#form-contacto{
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    width: 100%;
-    max-width: 600px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    margin: 10px;
-}
-#form-contacto input , textarea{
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-#button{
-    max-width: 100px;
-    width: 100%;
-    background-color: #2e2727;
-    color: #fff;
-    padding: 10px 15px;
-    border:palevioletred;
-    border-radius: 4px;
-    cursor: pointer;
-}
-#button:hover {
-    background-color: #ff0157;
-}
-
-@media screen and (max-width: 600px) {
-    #form-contacto {
-        max-width: 90%;
-    }
-
-    #form-contacto input[type="submit"] {
-        font-size: 14px;
-    }
 }
