--- a/static/css/CaC.css
+++ b/static/css/CaC.css
@@ -256,6 +256,46 @@ textarea {
         font-size: 14px;
     }
 }
+#map-container {
+    width: 550px;
+    height: 450px;
+    border: 4px solid rgb(12, 169, 212);
+    box-shadow: 2px 2px 10px rgb(0, 0, 0);
+    overflow: hidden;
+    display: flex;
+    
+}
+#map-section{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.map {
+    
+    width: 100%; 
+    height: 100%;
+}
+    .animated-text {
+
+        font-size: 1.5em;
+        opacity: 0;
+        animation: fadeIn 15s forwards;
+        margin-top: 20px;
+        font-family: 'Poppins', sans-serif;
+    }
+    
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 10;
+        }
+    }
+
 
 /* FOOTER */
 footer {
